# XenUI

./: -tree -r --name-only 570d11024dafc734aeea00cae8dca8525307eadc  .gitignore  AUTHORS.rst  CONTRIBUTING.md  README.md
Documentations/: docs.rst  index.rst
Documentations/Android/Linux_android/: doc1.rst
Documentations/Android/Windows_android/: doc1.rst
Documentations/Linux/: doc.rst
Documentations/Mac/: doc1.rst
Documentations/Windows/: doc1.rst
Linux/: CMakeLists.txt
Linux/Your project/Test_files/: CMakeLists.txt  linux.cpp  make_deb.sh
Linux/Your project/Test_files/package/DEBIAN/: control
Linux/Your project/Test_files/package/usr/share/XenUI/lib/: libSDL3.so.0.2.16  libXenUI.so.1
Linux/Your project/Test_files/package/usr/share/applications/: testxenui.desktop
Linux/Your project/Test_files/package/usr/share/testxenui/lib/: libSDL3_ttf.so.0.2.2
Linux/docs/: doc1.rst
Linux/include/XenUI/: Anchor.h  Button.h  Image.h  InputBox.h  Label.h  Orientation.h  Position.h  RadioButton.h  ScrollView.h  Shape.h  Slider.h  Switch.h  TextRenderer.h  UIElement.h  WindowUtil.h
Linux/src/: Anchor.cpp  Anchor.h  Button.cpp  CheckBox.cpp  CheckBox.h  Dropdown.cpp  Dropdown.h  Image.cpp  InputBox.cpp  InputBox.h  Label.cpp  Label.h  Orientation.h  Position.h  RadioButton.cpp  RadioButton.h  ScrollView.cpp  ScrollView.h  Shape.cpp  Shape.h  Slider.cpp  Slider.h  Switch.cpp  Switch.h  TextRenderer.cpp  TextRenderer.h  UIElement.h  WindowUtil.cpp  WindowUtil.h
Linux_Android/: AndroidManifest.xml  CHANGELOG.md  CMakeLists.txt  debug.keystore
Linux_Android/docs/: doc1.rst
Linux_Android/jni/: build.sh  debug.keystore
Linux_Android/jni/SDL3/SDL3-devel-3.2.10-android/SDL3-3.2.10/: AndroidManifest.xml  __main__.py  description.json
Linux_Android/jni/SDL3/SDL3-devel-3.2.10-android/SDL3-3.2.10/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
Linux_Android/jni/SDL3/SDL3-devel-3.2.10-android/SDL3-3.2.10/prefab/: prefab.json
Linux_Android/jni/SDL3/SDL3_ttf/libs/android.armeabi-v7a/: abi.json
Linux_Android/jni/SDL3/include/SDL3/: SDL_oldnames.h
Linux_Android/jni/output/dex_output/: classes.dex
Linux_Android/jni/src/: Anchor.cpp  Anchor.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Dropdown.cpp  Dropdown.h  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Label.cpp  Label.h  Orientation.h  Position.h  RadioButton.cpp  RadioButton.h  ScrollView.cpp  ScrollView.h  Shape.cpp  Shape.h  Slider.cpp  Slider.h  Switch.cpp  Switch.h  TextRenderer.cpp  TextRenderer.h  UIElement.h  WindowUtil.cpp  WindowUtil.h  main.cpp
Linux_Android/output_apk/: armeabi-v7a.apk.idsig
Linux_Android/res/values/: strings.xml
Linux_Android/src/main/java/org/sarowar/sdlnativeapp/: MainActivity.java
Mac/: CLA.md  CMakeLists.txt  Info.plist  main.cpp
Mac/XenUI/include/XenUI/: Anchor.h  Button.h  CheckBox.h  Dropdown.h  InputBox.h  Position.h  TextRenderer.h  UIElement.h
Mac/src/: Anchor.cpp  Anchor.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Dropdown.cpp  Dropdown.h  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Orientation.h  RadioButton.cpp  RadioButton.h  ScrollView.cpp  Shape.cpp  Shape.h  Switch.cpp  Switch.h  TextRenderer.cpp  TextRenderer.h  WindowUtil.cpp  main.cpp
Windows/: CMakeLists.txt  LICENSE
Windows/cmake/: XenUIConfig.cmake.in
Windows/docs/: doc1.rst
Windows/examples/Test_files/: CMakeLists.txt  linux.cpp  setup.iss  windows.cpp
Windows/include/XenUI/: CheckBox.h  Dropdown.h  Image.h  InputBox.h  Label.h  ScrollView.h  TextRenderer.h  WindowUtil.h
Windows/install/include/XenUI/: Anchor.h  Button.h  CheckBox.h  Dropdown.h  Image.h  InputBox.h  Label.h  Orientation.h  Position.h  RadioButton.h  ScrollView.h  Shape.h  Slider.h  Switch.h  TextRenderer.h  UIElement.h  WindowUtil.h
Windows/install/lib/cmake/XenUI/: XenUIConfig.cmake  XenUITargets.cmake
Windows/src/: Anchor.cpp  Anchor.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Dropdown.cpp  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Label.cpp  Slider.cpp  Slider.h  TextRenderer.cpp  TextRenderer.h
Windows_Android/: CMakeLists.txt  local.properties
Windows_Android/app/build-temp/: classes.dex
Windows_Android/app/build-temp/linked_resources/: base.apk
Windows_Android/app/build-temp/linked_resources/com/example/myapp/: R.java
Windows_Android/build-temp/: classes.dex
Windows_Android/build-temp/apk_temp_contents/: AndroidManifest.xml  resources.arsc
Windows_Android/docs/: doc1.rst
Windows_Android/keystore/: release.keystore
Windows_Android/lib/SDL3_ttf/libs/android.arm64-v8a/: abi.json
Windows_Android/lib/SDL3_ttf/libs/android.x86/: abi.json
Windows_Android/lib/SDL3_ttf/libs/android.x86_64/: abi.json
Windows_Android/scripts/: build.bat  commands.txt
Windows_Android/src/main/: AndroidManifest.xml
Windows_Android/src/main/cpp/: Anchor.cpp  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Dropdown.cpp  Dropdown.h  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Label.cpp  Label.h  Orientation.h  Position.h  RadioButton.cpp  RadioButton.h  ScrollView.cpp  ScrollView.h  Shape.cpp  Shape.h  Slider.cpp  Slider.h  Switch.cpp  Switch.h  TextRenderer.cpp  TextRenderer.h  UIElement.h  WindowUtil.cpp  WindowUtil.h  main.cpp
Windows_Android/src/main/java/com/example/myapp/: MainActivity.java
Windows_Android/src/main/res/values/: strings.xml
